@@ -9,6 +9,9 @@ setting since version 1.2.0. If you have it on, turn it *off* if you can.
 * Improved register_globals paranoia checks
 * (bug 7545) Fix PHP version check on install
 * Experimental web API disabled by default
+* Disable PHP exception backtrace printing unless $wgShowExceptionDetails
+  is set. Backtraces may contain sensitive information in function call
+  parameters.
 
 
 == MediaWiki 1.8.0 ==
